--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,30 @@
 # Header
 menu:
   Home: /
-  Archives: /archives
-  About: /about.html
+  Nota Fiscal: /invoices.html
+  Determinação de Impostos: /calculation.html
+  Obrigações: /compliance.html
+  Documentos: /documents.html
+  Monitoramento: /monitor.html
 
 # Logo Image Source
-logo_src: /images/logo.svg
+logo_src: /images/favicon.svg
+favicon_src: /images/favicon.svg
 
 # Theme Main Subtitle
-subtitle_main: This is Phantom, a free, fully responsive site<br />template designed by <a href="http://html5up.net">HTML5 UP</a>.
+subtitle_main: Portal dos desenvolvedores da Avalara Brazil
 
 # Theme Secondary subtitle
-susbtitle_secondary: Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.
+susbtitle_secondary: Documentações em geral, APIs, how-to, FAQ e tudo mais que você poderá utilizar para se conectar com nossos produtos.
 
 # Footer About Section
-about_footer: This theme was initially developed by <a href="http://html5up.net" target="_blank">HTML5 UP</a>. It is adapted for Hexo by <a href="http://www.codeblocq.com/" target="_blank">Jonathan Klughertz</a>.<br />The source code is available on <a href="https://github.com/klugjo/hexo-theme-phantom" target="_blank">GitHub</a>.
+about_footer: Copyright 2017 Avalara Inc. All rights reserved.
 
 # Default post title
-default_post_title: Untitled
+default_post_title: Home
 
 # Default post cover index page (Recommended)
-default_cover_index: "http://placehold.it/450x450"
+default_cover_index: "https://www.avalara.com/wp-content/uploads/2016/01/global-bg.svg"
 
 # Default post cover index page (Optional)
 default_cover_detail:
@@ -31,7 +35,7 @@ show_dates:
 # Comments. Choose one by filling up the information
 comments:
   # Disqus comments
-  disqus_shortname: klugjo
+  disqus_shortname: avalara
   # Facebook comments
   facebook:
     appid:
@@ -42,13 +46,6 @@ comments:
 google_analytics:
 
 # Social Accounts
-twitter_url: https://twitter.com/?lang=en
-facebook_url: https://www.facebook.com/
-instagram_url: https://www.instagram.com/
-dribble_url: https://dribbble.com/
-github_url: https://github.com/klugjo/hexo-theme-phantom/commits?author=klugjo
-googleplus_url: https://plus.google.com/
-behance_url: https://www.behance.net/
-fivehundredpx_url: https://500px.com/
-email_url: \#
-rss_url: \#
+twitter_url: https://twitter.com/Avalara
+facebook_url: https://www.facebook.com/avalara
+github_url: https://github.com/Avalara
